samples/_failures_safe/1761454371_ea3c5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1dadabf.c:178: error: expected ‘;’, ‘,’ or ‘)’ at end of input
